--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -59,17 +59,14 @@ jobs:
           # dev/debug you're encouraged to start it yourself in a separate
           # terminal.
           TESTING_START_SERVER: true
+
+          CONTENT_ROOT: testing/content/files
+        # In terms of the --maxWorkers option, it's not yet clear which
+        # is best.
+        # See https://jestjs.io/docs/en/troubleshooting#tests-are-extremely-slow-on-docker-andor-continuous-integration-ci-server
+        # and https://www.peterbe.com/plog/ideal-number-of-workers-in-jest-maxWorkers
+        # CI tends to have fewer CPUs than laptops so let's stay conservative
+        # for now.
+        # Also note that `--runInBand` is the same as `--maxWorkers=1`
         run: |
-          # Needed for the puppeteer tests that start a static Express server,
-          # but it starts it from within the testing/ path.
-          echo "CONTENT_ROOT=content/files" >> .env
-
-          # In terms of the --maxWorkers option, it's not yet clear which
-          # is best.
-          # See https://jestjs.io/docs/en/troubleshooting#tests-are-extremely-slow-on-docker-andor-continuous-integration-ci-server
-          # and https://www.peterbe.com/plog/ideal-number-of-workers-in-jest-maxWorkers
-          # CI tends to have fewer CPUs than laptops so let's stay conservative
-          # for now.
-          # Also note that `--runInBand` is the same as `--maxWorkers=1`
-
-          ./testing/scripts/functional-test.sh --runInBand
+          yarn test:functional --runInBand
