--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test": "yarn prettier-check && yarn test:client && yarn test:kumascript && yarn test:build && yarn test:testing",
     "test:build": "jest build",
     "test:client": "cd client && tsc --noEmit && react-scripts test --env=jest-environment-jsdom-sixteen",
+    "test:functional": "cross-env-shell ENV_FILE=testing/.env REACT_APP_AUTOCOMPLETE_SEARCH_WIDGET=true yarn prepare-build && yarn build && yarn test:testing",
     "test:kumascript": "jest kumascript",
     "test:testing": "cd testing && jest",
     "tool": "node tool/cli.js"
