--- a/.eslintignore
+++ b/.eslintignore
@@ -2,3 +2,5 @@
 client/build/
 dist/
 libs/
+kumascript/tests/fixtures/render/macros/syntax.ejs
+kumascript/tests/fixtures/server/macros/broken2.ejs
